--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
-include_directories(SYSTEM ${LIBS_DIR}/asio/include)
-
 add_executable(WebSocketTest main.cpp)
+
+
+if(MINGW)
+    target_link_libraries(WebSocketTest ws2_32)
+endif()
