--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
-add_executable(WebSocketTest main.cpp)
+add_executable(web-socket-test main.cpp)
+
+target_link_libraries (web-socket-test ssl crypto)
 
 
 if(MINGW)
-    target_link_libraries(WebSocketTest ws2_32)
+    target_link_libraries(web-socket-test ws2_32)
 endif()
